fix align issue

--- a/css/primary.sass
+++ b/css/primary.sass
@@ -168,7 +168,7 @@ body
   margin: 0 auto
 
   .filler
-    width: 7px
+    width: 6px
     display: block
     height: 104px
     background: #111
@@ -186,6 +186,12 @@ body
     display: block
     text-decoration: none
     padding: 12px 28px
+
+    &.home
+    &.news
+    &.downloads
+    &.contact
+    &.products
 
     &:hover
       opacity: 0.92
